Child To Parent Added

--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,1 +1,4 @@
-<h4>This is Child Component :{{uname}}</h4>
+<div>
+    <h4>This is Child Component :{{uname}}</h4>
+    <button (click)="passData()">Send Message To Parent</button>
+</div>
