HTTP Serviece Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!-- <app-ng-switch></app-ng-switch> -->
-<app-parent></app-parent>
-{{myAge|age}}
+<!-- <app-parent></app-parent>
+<h4 >{{myAge|age}}</h4> -->
+<app-users></app-users>
