--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center">Http Error Handle</h1>
+<h1 class="text-center">Http Service</h1>
 
 <div *ngIf="userData.length>0; else noUsers">
     <table class="table">
