--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="ngswitch">Ng-Switch <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/ngswitch">Ng-Switch</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="parent">Parent</a>
+          <a class="nav-link" routerLink="/parent">Parent</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="users">HTTP Call</a>
+          <a class="nav-link" routerLink="/users">HTTP Call</a>
         </li>
       </ul>
     </div>
