--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Tutorial</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/ngswitch">Ng-Switch</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/parent">Parent</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/users">HTTP Call</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <router-outlet></router-outlet>
+  <a class="navbar-brand" routerLink="/home">Tutorial</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/ngswitch">Ng-Switch</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/parent">Parent</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/users">HTTP Call</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<router-outlet></router-outlet>
