--- a/src/app/components/single-user/single-user.component.html
+++ b/src/app/components/single-user/single-user.component.html
@@ -1,5 +1,16 @@
-<h5>
+<div><h6>
     <pre>
     {{singleUser|json}}
 </pre>
-</h5>
+</h6></div>
+<div class="nav">
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="address">Address</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="company">Company</a>
+        </li>
+      </ul>
+</div>
+<router-outlet></router-outlet>
