--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,5 @@
 <h1 class="text-center">Http Service</h1>
+<button type="button" class="btn btn-danger" routerLink="/adduser"> Add User</button>
 
 <div *ngIf="userData.length>0; else noUsers">
     <table class="table">
