--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
         <a class="nav-link" routerLink="/users">HTTP Call</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/products">Products</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" [routerLink]="['/about',
         {
           outlets:{
@@ -31,4 +34,3 @@
   </div>
 </nav>
 <router-outlet></router-outlet>
-<app-product-dashboard></app-product-dashboard>
