--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,9 @@
         <a class="nav-link" routerLink="/rxjs">RxJS</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/rxjssubject">RxJS-Subject</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" [routerLink]="['/about',
         {
           outlets:{
