Replay Subject Added

--- a/src/app/rxjs/rxjs-subject/rxjs-subject.component.html
+++ b/src/app/rxjs/rxjs-subject/rxjs-subject.component.html
@@ -2,19 +2,37 @@
 
 	<h3 style="text-align:center">There are 3 variant of RxJS Subject</h3>
 	<ul>
-		<li>BehaviorSubject</li>
-		<p>BehaviorSubject is a special type of Subject whose only different is that it will emit the last value upon a
-			new observer's subscription.
-			A BehaviorSubject holds one value. When it is subscribed it emits the value immediately.
-			A Subject doesn't hold a value.
+		<li class="myDIV">BehaviorSubject</li>
+		<div class="hide">
+			<p>BehaviorSubject is a special type of Subject whose only different is that it will emit the last value
+				upon a
+				new observer's subscription.
+				A BehaviorSubject holds one value. When it is subscribed it emits the value immediately.
+				A Subject doesn't hold a value.</p>
 
-			BehaviorSubject is the most used subject in Angular application.
-			There is one state management library in Angular ngRX, which is completely designed on BehaviorSubject.
-			In angular application, if you requirement is to pass some initial value to your subscriber even without
-			publishing the data,
-			or you want your subscriber should always get some data even before the subscription. Then behaviorSubject
-			is the solution.</p>
-		<li>ReplaySubject</li>
-		<li>AsyncSubject</li>
+			<p>BehaviorSubject is the most used subject in Angular application.
+				There is one state management library in Angular ngRX, which is completely designed on BehaviorSubject.
+				In angular application, if you requirement is to pass some initial value to your subscriber even without
+				publishing the data,
+				or you want your subscriber should always get some data even before the subscription. Then
+				behaviorSubject
+				is the solution.
+			</p>
+		</div>
+
+		<li class="myDIV">ReplaySubject</li>
+		<div class="hide">
+			<p>ReplaySubject is one of the variant of Subject and it can emit old values to new subscribers. It can
+				buffer the old emitted values and then immediately pass those values to the new subscribers and the
+				latest value to the existing subscriber</p>
+			<p>Unlike BehaviorSubject ReplaySubject don't have any initial value, so if your requirement says that
+				initial values is not needed but instead want to emit multiple previous emitted values(that can be
+				decide how many old values) to emit to new subscribers so that they have some data use Replay Subject.
+			</p>
+		</div>
+		<li class="myDIV">AsyncSubject</li>
+		<div class="hide">
+			<p>,,,,,......,,,,,</p>
+		</div>
 	</ul>
 </div>
